[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
sha2 = "0.10"
pqc_dilithium = "0.2.0"
num-bigint = "0.4"
lazy_static = "1.4"
chrono = "0.4"
flate2 = "1.0"
bytes = "1.0"
ed25519-dalek = "1.0"
rand = "0.8"
aes-gcm = "0.10.0"
safe_pqc_kyber = { path = "./argyle-kyber", features = ["kyber1024", "zeroize"]}
rusqlite = { version = "0.34.0", features = ["bundled"] }
