[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
sha2 = "0.10"
pqc_dilithium = { path = "./dilithium-master", features = ["mode3", "random_signing", "aes"] }
num-bigint = "0.4"
lazy_static = "1.4"
chrono = "0.4"
flate2 = "1.0"
bytes = "1.0"
ed25519-dalek = "2.1.1"
rand = "0.8"
aes-gcm = "0.10.0"
safe_pqc_kyber = { path = "./pqc_kyber_improved", features = ["kyber1024", "zeroize"]}
pq_tls = { version = "0.1.0", path = "pq_tls" }